[package]
name = "web-content-extract"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
serde_json = "1.0"
playwright = "0.0.20"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
regex = "1.10"
htmd = "0.1.6"
url = "2.5"
tonic = { version = "0.13", features = ["transport"] }
prost = "0.13"
chrono = "0.4.41"
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5.0"
base64 = "0.21.7"

[build-dependencies]
tonic-build = "0.13"
prost-build = "0.13"

[[bin]]
name = "client"
path = "src/client.rs"
